changed css colors codes

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -26,12 +26,12 @@
 }
 
 .feedbackGreen {
-    color: #008000 !important;
+    color: #74C446 !important;
     font-size: 65px !important;
 }
 
 .feedbackYellow {
-    color: #FFFF00 !important;
+    color: #FFCD28 !important;
     font-size: 65px !important;
 }
 
